deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ufe-controller
spec:
  replicas: 2
  selector:
    matchLabels:
      pod: ufe-controller
  template: 
    metadata:
      labels: 
        pod: ufe-controller
    spec:
      serviceAccountName: ufe-controller-account
      containers:
      - name: ufe-controller
        image: milung/ufe-controller
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 7180
        livenessProbe:
          httpGet:
            path: /healtz
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          requests:
            memory: "64M"
            cpu: "0.01"
          limits:
            memory: "320M"
            cpu: "0.3"
